Project 90% complete, demo tomorrow. Finish notes after. I learned a lot