@@ -7,6 +7,7 @@
     <groupId>org.app</groupId>
     <artifactId>CEC</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
@@ -55,8 +56,87 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>org.app.Main</mainClass>
+
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.4.1</version>
+                <executions>
+                    <execution>
+                        <id>shade-all</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <!-- make sure we *attach* the shaded jar so it shows up in target/ -->
+                            <shadedArtifactAttached>true</shadedArtifactAttached>
+                            <!-- name it with classifier “shaded” -->
+                            <shadedClassifierName>shaded</shadedClassifierName>
+                            <!-- Make sure the resulting JAR has your Main‑Class in its manifest -->
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>org.app.Main</mainClass>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.panteleyev</groupId>
+                <artifactId>jpackage-maven-plugin</artifactId>
+                <version>1.6.4</version>
+                <configuration>
+
+                    <input>${project.build.directory}</input>
+                    <winMenu>true</winMenu>
+                    <winConsole>true</winConsole>
+                    <mainJar>${project.build.finalName}-shaded.jar</mainJar>
+                    <mainClass>org.app.Main</mainClass>
+
+                    <name>CEC</name>
+                    <appVersion>0.1.0</appVersion>
+                    <vendor>app.org</vendor>
+
+                    <destination>target/installer</destination>
+                    <icon>src/main/resources/org/app/icon.ico</icon>
+                    <modulePaths>
+                        <modulePath>C:\javafx-jmods-23.0.2</modulePath>
+                    </modulePaths>
+                    <addModules>javafx.controls,javafx.fxml,java.sql</addModules>
+                    <arguments>
+                        <argument>--add-modules</argument>
+                        <argument>javafx.controls,javafx.fxml,java.sql</argument>
+                    </arguments>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-app-image</id>
+                        <phase>package</phase>
+
+                        <goals>
+                            <goal>jpackage</goal>
+                        </goals>
+
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>${project.build.directory}/installer</directory>
+                            <followSymlinks>false</followSymlinks>
+                        </fileset>
+                    </filesets>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 </project>
